# users_microservice

./: .gitignore  README.md  pyproject.toml
tech/: .gitignore  Dockerfile  README.md  behave.ini  docker-compose-user.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  sonar-project.properties
tech/.github/workflows/: app-ci-cd.yml
tech/.scannerwork/: report-task.txt
tech/k8s/: PersistentVolumeClaim.yaml  configmap.yaml  deployment-postgres.yaml  deployment-users.yaml  job.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-service.yaml  postgres-services.yaml  service-users.yaml  tech-app-config.yaml  tech-app-deployment.yaml  tech-app-hpa.yaml  tech-app-service.yaml
tech/migrations/: env.py
tech/migrations/versions/: 13b202cd2040_create_payments_table.py  566d13c2c86b_add_order_model.py  6c571282418a_create_users_table.py  9277bb2509b3_add_cpf_column.py  ca3b6e97d80b_add_order_model.py  f8d5acfe36b5_create_products_table.py
tech/reports/behave/: TESTS-auth.xml  TESTS-features.auth.xml  TESTS-features.users.xml  TESTS-users.xml
tech/tech/: app.py  database.py  models.py  schemas.py  security.py
tech/tech/api/: app.py  auth_router.py  orders_router.py  payments_router.py  products_router.py  users_router.py
tech/tech/core/app/: app.py  orders_router.py  products_router.py  users_router.py
tech/tech/core/domain/: models.py  schemas.py  settings.py  value_objects.py
tech/tech/core/use_cases/: orders_use_cases.py  products_use_cases.py  users_use_cases.py
tech/tech/domain/entities/: orders.py  payments.py  products.py  users.py
tech/tech/infra/databases/: database.py
tech/tech/infra/function/: lambda_function.py
tech/tech/infra/repositories/: sql_alchemy_models.py  sql_alchemy_order_repository.py  sql_alchemy_payment_repository.py  sql_alchemy_product_repository.py  sql_alchemy_user_repository.py  user_mapper.py
tech/tech/interfaces/controllers/: auth_controller.py  order_controller.py  payment_controller.py  product_controller.py  user_controller.py
tech/tech/interfaces/gateways/: cognito_gateway.py  mock_payment_gateway.py  order_gateway.py  payment_gateway.py  product_gateway.py  user_gateway.py
tech/tech/interfaces/middlewares/: admin_auth_middleware.py
tech/tech/interfaces/presenters/: order_presenter.py  payment_presenter.py  product_presenter.py  user_presenter.py
tech/tech/interfaces/repositories/: order_repository.py  payment_repository.py  product_repository.py  user_repository.py
tech/tech/interfaces/schemas/: auth_schema.py  order_schema.py  payment_schema.py  product_schema.py  user_schema.py
tech/tech/ports/repositories/: user_repository.py
tech/tech/use_cases/authenticate/: authenticate_user_use_case.py
tech/tech/use_cases/orders/: create_order_use_case.py  delete_order_use_case.py  list_orders_use_case.py  update_order_status_use_case.py
tech/tech/use_cases/payments/: create_payment_use_case.py  get_payment_status_use_case.py  update_payment_status_use_case.py  webhook_payment_use_case.py
tech/tech/use_cases/products/: create_product_use_case.py  delete_product_use_case.py  get_product_use_case.py  list_all_products_use_case.py  list_products_by_category_use_case.py  update_product_use_case.py  verify_token_use_case.py
tech/tech/use_cases/users/: create_user_use_case.py  (+5 more)
tech/terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tech/tests/: test_app.py  test_models.py
tech/tests/api/: conftest.py  test_apis_router.py
tech/tests/tech/: conftest.py
(+52 files in other folders)
